<resources>
    <string name="app_name">AirChef</string>
    <string name="profile_location">Location:</string>
    <string name="profile_location_hint">Enter your dorm</string>
    <string name="profile_bio">Bio:</string>
    <string name="profile_bio_hint">Tell us about yourself!</string>
    <string name="profile_eat">I eat:</string>
    <string name="profile_eat_hint">Tell us what food you like to eat!</string>
    <string name="profile_cook">I cook:</string>
    <string name="profile_cook_hint">Tell us what you cook!</string>
    <string name="profile_picture">Profile picture:</string>
    <string name="select_picture_button">Upload image</string>
    <string name="finish_button_text">Finish</string>
    <string name="firstname">*First name:</string>
    <string name="lastname">*Last name:</string>
    <string name="requiredFields">* Indicates a required field</string>
    <string name="new_meal_button_text">New Meal</string>
    <string name="new_meal_submit_text">Post Meal</string>
    <string name="dish_name_ex">What\'s it called?</string>
    <string name="dish_ingredients_ex">What\'s it made of?</string>
    <string name="dish_location_ex">Where to meet you?</string>
    <string name="dish_price_ex">How much is it?</string>
    <string name="dish_details_ex">Ingredients and any other details</string>

</resources>
