<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cs.brandeis.marius.airchef.myProfileActivity">

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:id="@+id/profilePictureDisplay"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/nameDisplay"
        android:layout_below="@+id/profilePictureDisplay"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/bioDisplay"
        android:layout_alignRight="@+id/profilePictureDisplay"
        android:layout_alignEnd="@+id/profilePictureDisplay"
        android:layout_alignLeft="@+id/profilePictureDisplay"
        android:layout_alignStart="@+id/profilePictureDisplay"
        android:layout_below="@+id/nameDisplay"
        android:lines="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationMarker"
        android:layout_below="@+id/bioDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/profile_location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/userLocation"
        android:layout_below="@+id/bioDisplay"
        android:layout_toRightOf="@+id/locationMarker"
        android:layout_toEndOf="@+id/locationMarker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_eat"
        android:id="@+id/eatMarker"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/userEats"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/userLocation"
        android:layout_toEndOf="@+id/userLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_cook"
        android:id="@+id/cookMarker"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/eatMarker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/userCooks"
        android:layout_toRightOf="@id/cookMarker"
        android:layout_alignLeft="@+id/userEats"
        android:layout_alignStart="@+id/userEats"
        android:layout_alignBottom="@+id/cookMarker"
        android:layout_alignTop="@+id/cookMarker" />

</RelativeLayout>
